[package]
name = "async_vpk"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "async_vpk"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
crc32fast = "1.4"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.15"
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
